remove donation desc

--- a/donate.html
+++ b/donate.html
@@ -43,14 +43,14 @@
 
       <div id="donation">
 <h3>Donation</h3>
-<p><a href="http://sourceforge.net/donate/index.php?group_id=183378"><img src="http://images.sourceforge.net/images/project-support.jpg" alt="Support This Project" style="float: right; margin: 2px" /></a> <strong>Donate and leave comment in SourceForge</strong> If you use Partclone and it does the job for you, please donate to help us to make Partclone better.</p>
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+<p><!--<a href="http://sourceforge.net/donate/index.php?group_id=183378"><img src="http://images.sourceforge.net/images/project-support.jpg" alt="Support This Project" style="float: right; margin: 2px" /></a>--><strong>Donate and leave comment in SourceForge</strong> If you use Partclone and it does the job for you, please donate to help us to make Partclone better.</p>
+<!--<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 or <strong>Donate via PayPal:</strong> <input name="amount" value="5" type="radio"> $5 <input name="amount" value="10" type="radio"> $10 <input name="amount" value="20" type="radio"> $20  <input name="amount" value="50" type="radio"> $50 <input name="amount" value="" type="radio"> Other
 <input type="hidden" name="cmd" value="_donations">
 <input type="hidden" name="business" value="tlinux.tsai@gmail.com">
 <input type="hidden" name="item_name" value="partclone.org">
 <input name="submit" class="button" value="Donate!" type="submit">
-</form>
+</form>-->
 <p><strong>How to add link here:</strong><br />
 We want to say THANK YOU for all contributer, and list all received donation below. Since receiving your donation, we will send mail and list here. If you prefer assigne different arch text and link url, please just reply mail to us.</p>
 <h3>Received Donation List</h3>
