update link name

--- a/credits.html
+++ b/credits.html
@@ -63,9 +63,9 @@
 	    <li>Javor, source code patches</li>
 	    <li>Kristian Erik Hermansen, source code suggestion</li>
 	</ul>
-	<h4>Donation</h4>
+	<h4>Historical donation page</h4>
 	<ul>
-	    <li>Check list <a href="donate.html">Donation</a></li>
+	    <li>Check list <a href="donate.html">Historical donation page</a></li>
 	</ul>
 	<h4>Translators</h4>
 	<ul>
